test(java-sdk): check the TotalTax behavior of matching up the type of taxes together and verifying the total values calculations